# khata

./: .gitignore  Invoices (1).xlsx  Invoices (3).xlsx  MASTER CATALOG - Master Catalog.csv  MASTER CATALOG.xlsx  README.md  agent.md
backend/: agent.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_auth_tables.py  0002_master_data_and_stock_tables.py  0003_seller_ledger_tables.py  0004_invoice_tables.py  0005_product_schema_v2.py  0006_add_buyers.py  0007_rename_sellers_to_customers.py  0008_invoice_v2.py  0009_invoice_gst_flags.py  0010_product_hsn_and_unit_price_precision.py
backend/app/: auth.py  config.py  db.py  main.py
backend/app/commands/: bootstrap_user.py  seed_demo_data.py
backend/app/core/: decimals.py  idempotency.py  pricing.py  security.py  state_codes.py  tax.py
backend/app/models/: app_user.py  buyer.py  buyer_transaction.py  company_profile.py  customer.py  customer_transaction.py  invoice.py  invoice_item.py  product.py  seller.py  seller_transaction.py  stock_movement.py  user_session.py
backend/app/routers/: analytics.py  auth.py  buyers.py  company_profile.py  customers.py  invoices.py  products.py  sellers.py
backend/pure_tests/: test_buyer_ledger_pure.py  test_decimals.py  test_invoice_v2_domain_pure.py  test_product_schema_v2_migration.py
backend/tests/: conftest.py  test_app_import.py  test_customer_migration_contract.py  test_customer_money_schema.py  test_customer_naming_contract.py  test_invoice_gst_flag_migration_contract.py  test_product_hsn_precision_migration_contract.py
mobile/: README.md  (+3 more)
(+337 files in other folders)
